@startuml
'https://plantuml.com/class-diagram

enum ERole{
    ROLE_USER
    ROLE_TEACHER
    ROLE_VIP
}

class Card{
    -id: Long
    -ru: String
    -ruTranscription: String
    -en: String
    -enTranscription: String

}

class CardSet{
    -id: Long
    -creator: User
    -cardList: List<Card>
    -reviews: List<Review>
    +void addCard(Card)
}

class Review{
    -id: Long
    -user: User
    -comment: String
    -rate: Integer
}

class User{
    -id: Long
    -username: String
    -password: String
    -role: Role
    -email: String
    -ownSets: List<CardSet>
    -otherSets: List<CardSet>
    +void addOwnCardSet(CardSet)
    +void addOtherSets(CardSet)
}

class Role{
    -id: Long
    -name: ERole
}

Role o-- ERole
CardSet *-- Card
User *-- Role
User o-- CardSet
CardSet o-- Review







@enduml